examples/test/testpolicy10459.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10459
  namespace: namespace366
spec:
  podSelector:
    matchLabels:
      key13: value42
      key2: value29
      key41: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value36
          key12: value43
          key19: value21
